# nl_date_parser

./: README.md  pyproject.toml
nldate/: parser.py
src/nldate/: __init__.py  parser.py
tests/: test_nldate.py
